<resources>
    <string name="app_name">s165158 GalgelegAflevering</string>
    <string name="Galgen">Galgen</string>

    <!-- TODO: App content strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_again">spil igen</string>
    <string name="example_string">example_string</string>
    <string name="score_text">Din score blev:\u0020</string>
    <string name="start_game">Start</string>
    <string name="help">Hjælp</string>
    <string name="high_score">Scores</string>
    <string name="menu">Menu</string>
    <string name="help_message">Gæt et enkelt bogstav af gangen indtil du gætter det fulde ord. \nDu må få 6 forkerte, før du taber spillet. \n\nEn score vil blive tildelt til sidst.</string>
    <string name="welcome">Velkommen, gæt for at starte</string>
    <string name="correct_answer">Du gættede korrekt</string>
    <string name="you_have">du har</string>
    <string name="wrong">forkerte</string>
    <string name="winner_winner_chicken_dinner">Winner winner chicken dinner</string>
    <string name="loss">Du har tabt, ordet var:\u0020</string>
    <string name="game_end">\nSpillet er slut, du kan nu vælge at se din score på highscorelisten, eller gå til hovedmenuen, hvor du kan starte et nyt spil.</string>
    <string name="winner">Du vandt, du brugte\u0020</string>
    <string name="attempts">\u0020forsøg. </string>
    <string name="waiting">The game is loading the word from DR...</string>
    <string name="no_score">Ingen scores endnu, spil et spil for at gemme en score her!</string>
    <string name="loser_screen">Taberskærm</string>
    <string name="you_won">Du vandt!</string>
    <string name="used_attempts">Du brugte </string>
    <string name="winner_screen">Vinderskærm</string>
    <string name="you_lose">Du tabte</string>
    <string name="game_has_ended">Spillet er slut, tryk på knappen for at fortsætte</string>
    <string name="ok">OK</string>
    <string name="click_to_continue">Tryk et sted på skærmen for at fortsætte</string>
    <string name="start_game_2player">2 Players</string>
    <string name="start_game_1player">1 Player</string>
    <string name="choose_word">Vælgt ét ord til modspiller</string>
    <string name="descScore">ID, Score, Ord, Dato:</string>

    <string-array name="example_strings">
        <item>Eksempel</item>
        <item>Eksempel</item>
        <item>Eksempel</item>
        <item>Eksempel</item>
        <item>Eksempel</item>
        <item>Eksempel</item>
        <item>Eksempel</item>
    </string-array>
</resources>
