<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button_start_game_1player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="112dp"
        android:background="@drawable/shadow"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/start_game_1player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start_game_2player"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/button_start_game_1player"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/shadow"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/start_game_2player"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start_game_1player" />

    <Button
        android:id="@+id/button_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_start_game_2player"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/shadow"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/help"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_high_score" />

    <Button
        android:id="@+id/button_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_help"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/shadow"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/high_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start_game_2player" />


</android.support.constraint.ConstraintLayout>